# lookatarts

./: .gitignore  .replit  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts  wrangler.jsonc
.github/workflows/: deploy.yml
cf/: convert-csv.mjs  schema.sql  worker.ts
documents/: plan.md  prd.md
legacy-replit-backend/: main.py  pyproject.toml  scraper.py
public/: manifest.json  robots.txt
public/audio/: README.md  placeholder.html
src/: App.tsx  AppJustInCase.tsx  config.ts  index.css  main.tsx  types.ts
src/assets/: PanAnimation.lottie
src/components/: 3DDivider.tsx  AboutModal.tsx  AudioToggle.tsx  AuroraBackground.tsx  AutoPanZoom.tsx  CompletionScreen.tsx  ImageDisplay.tsx  LoadingScreen.tsx  MeditationControlsOverlay.tsx  PanAnimation.tsx  StartScreen.tsx  StopButton.tsx  ThemeToggle.tsx  Timer.tsx
src/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx
src/components/ui/: Noise.tsx  select.tsx
src/constants/: noise.ts
src/contexts/: AudioContext.tsx  MeditationContext.tsx  ThemeContext.tsx  UIContext.tsx
src/hooks/: useFullscreen.ts  useImageLoader.ts  useIsMobile.ts  useMeditation.ts  useTimer.ts  useViewportHeight.ts
src/pages/: EndPage.tsx  HomePage.tsx  MeditationPage.tsx
src/providers/: AppProviders.tsx  ViewportProvider.tsx
src/services/: api.ts
src/utils/: animations.ts
