[tool.poetry]
name = "lookatarts"
version = "0.1.0"
description = ""
authors = ["pekap", "vaheta"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flask = "^3.0.3"
fastapi = "^0.112.1"
pydantic = "^2.8.2"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
replit-object-storage = "1.0.2"
pandas = "^2.2.3"
tqdm = "^4.67.1"
numpy = "^2.2.2"
opencv-python = "^4.11.0.86"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.0"
sqlalchemy = {version = "^2.0.38", extras = ["asyncio"]}
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.10"
openai = "^1.66.3"
tenacity = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
